operation menu flexibly shown to avoid overflow

--- a/client/src/App.less
+++ b/client/src/App.less
@@ -11,10 +11,11 @@
   min-height: 100vh;
   // #ECEFF4
   // #252932
-  .global-background-color();
+  position: relative;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
+  overflow: auto;
   .content-area {
     width: 60rem;
     height: fit-content;
